is this how this works?

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -10,5 +10,7 @@
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <!-- Include the script for Netlify for youtube etc -->
+    <script src="https://sharadcodes.github.io/hugo-shortcodes-netlify-cms/dist/hugo_shortcodes_netlify_cms.js"></script>
   </body>
 </html>
